# Qu-ART

./: .gitignore  ART.h  ART_tail.h  ArtNode.h  ArtNodeNewMethods.cpp  ArtNodeTail.cpp  ArtNode_lil.h  CMakeLists.txt  Chain.h  ConcurrentArtNodeMethods.cpp  Helper.h  OLC.h  QuART_lil.h  QuART_tail.h  QuART_xtail.h  README.md  art.cpp  count_fp_changes.sh  count_fp_inserts.sh  count_insert_types.sh  insert_profiling.cpp  lil_insert.md  main.cpp  perf.data  perf.data.old  profile_inserts.cpp  profile_inserts_with_file.cpp  quart.cpp  quart_lil.cpp  quart_tail.cpp  quart_xtail.cpp  run.cpp  run_bin.cpp  run_count_changes.cpp  run_count_inserts.cpp  run_count_resets.cpp  run_experiments.sh  run_txt.cpp  test.sh  test_range_query.cpp
.github/workflows/: clang-format-check.yml
QuARTVariants/: ConcurrentART.h  QuART_iglil.h  QuART_iglilRevised.h  QuART_lil.h  QuART_lilRevised.h  QuART_smarttail.h  QuART_stail.h  QuART_tail.h  QuART_xtail.h  QuART_xtailRevised.h
benchmarks/: art.cpp  art_prefix_test.cpp  concurrent_art.cpp  count_fp_inserts.cpp  debug.cpp  main.cpp  profile_inserts.cpp  profile_inserts_with_file.cpp  quart_iglil.cpp  quart_iglilrevised.cpp  quart_lil.cpp  quart_lilrevised.cpp  quart_smarttail.cpp  quart_stail.cpp  quart_tail.cpp  quart_xtail.cpp  quart_xtailrevised.cpp  test_range_query.cpp
concurrent/: ConcurrentART.h  VersionControl.cpp  VersionControl.h  run_cc.cpp
trees/: QuART_lil.h  QuART_lil_can.h  QuART_stail.h  QuART_stail_reset.h  QuART_tail.h
workloads/: createdata_N1000_K10_L10_S1234_a1_b1_P252.txt
